--- a/app/styles/Styles.scss
+++ b/app/styles/Styles.scss
@@ -95,13 +95,21 @@
     margin-top: 24px;
 }
 
-
+// Import file page
+.btnsContainer
+{
+   & > div:nth-child(1)
+    {
+        justify-content: space-between;
+        background-color: #e8eaf6;
+    }
+}
 .importBtn
 {
     text-align: right;
     display: flex;
     justify-content: right;
-    width: 500px;
+    // width: 500px;
     button
     {
         width: 114px;
@@ -122,6 +130,8 @@
     }
 }
 
+
+
 .ImportTableContainer
 {
     .tableSty
@@ -132,14 +142,33 @@
             {
                 th
                 {
-                    background-color: #e8eaf6;
+                    // background-color: #e8eaf6;
                 }
             }
         }
     }
 }
 
+// Import file page -- end
+
+
+// delete Alert popup page
 .deleteAlertBtnSty
 {
     width: 80px;
 }
+// delete Alert popup page --end
+
+// create organization
+.fieldsSty
+{
+    margin: 0;
+}
+
+.errorMes
+{
+    font-size: 12px;
+    color: #f00;
+}
+
+// create organization --end
