--- a/app/styles/Styles.scss
+++ b/app/styles/Styles.scss
@@ -173,3 +173,128 @@
 }
 
 // create organization --end
+
+// Employee Documents 
+
+.container
+{
+    & > div
+    {
+        div
+        {
+            div
+            {
+                margin: 0;
+            }
+        }
+    }
+}
+.EmpDocTableContainerSty
+{
+    margin-top: 30px;
+}
+
+.imgContainer
+{
+    justify-content: center;
+    text-align: center;
+    height: 298px;
+    align-items: flex-start !important;
+
+    img
+    {
+        width: 60%;
+        max-height: -webkit-fill-available;
+        box-shadow: 0px 3px 5px -1px #bdbdbd;
+        border-radius: 3px;
+    }
+
+    object
+    {
+        pointer-events: none;
+        box-shadow: 0px 3px 5px -1px #bdbdbd;
+    }
+}
+
+.printBtnSty,
+.BtnSty
+{
+    margin-left: 10px !important;
+    margin-right: 10px !important;
+}
+
+.uploadBtnSty
+{
+    opacity: 0;
+    width: 2px;
+    height: 2px;
+}
+
+
+.viewerPopup
+{
+
+   & > div:nth-child(3)
+    {
+        & >  div
+        {
+            max-height: none;
+            max-width: none;
+            width: 80%;
+            // height: 90%;
+            // height: -webkit-fill-available;
+            // height: inherit;
+            max-height: 90%;
+
+            object
+            {
+                height: 100%;
+            }
+        }
+
+    }
+
+    .fileContainer
+    {
+        height: 100%;
+        // text-align: center;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
+
+        img
+        {
+            max-height: -webkit-fill-available;
+        }
+    }
+
+    & > div:nth-child(3)
+        {
+
+            & > div:nth-child(1)
+            {
+                & > div:nth-child(2)
+                {
+            position: relative;
+            max-height: 100vh;
+            height: 100vh;
+
+            p
+            {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                img
+                {
+                    height: auto;
+                    position: absolute;
+                }
+            }
+                }
+            }
+            
+        }
+}
+
+// Employee Documents --end
