--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -8,3 +8,7 @@
   {
     margin-top: -15px !important;
   }
+  
+  .mui-style-ltr-prkftb-MuiTable-root-table-stripped {
+    min-width: 0px !important;
+  }
