update add&edit Butoon component

--- a/app/styles/Styles.scss
+++ b/app/styles/Styles.scss
@@ -490,4 +490,10 @@
     // general Style --end
 }
 
+.addbuttonlink
+{
+    color: white;
+    text-decoration:none;
+
+}
 // reaponsive style --end
