Add 3 forms of Shifts

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -15,3 +15,7 @@
   .mui-style-ltr-lgyxef-MuiPaper-root-MuiDialog-paper{
     max-width: 1000px !important;
   }
+  .mui-style-ltr-46bh2p-MuiCardContent-root {
+    padding: 8px !important;
+    padding-bottom: 0px !important;
+}
