update grid Style & solve Gender multirender

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -20,13 +20,13 @@
     padding-bottom: 0px !important;
 }
 
-.tss-1g1redb-MUIDataTableHeadCell-fixedHeader
+/* .tss-1g1redb-MUIDataTableHeadCell-fixedHeader
 {
   background-color: #b3d4fc !important;
-}
-.mui-style-ltr-1347j2m-MuiPaper-root{
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-.tss-193o0zc-MUIDataTableSelectCell-headerCell {
+} */
+/* .mui-style-ltr-1347j2m-MuiPaper-root{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
+} */
+/* .tss-193o0zc-MUIDataTableSelectCell-headerCell {
   background-color: #b3d4fc !important;
-}
+} */
