--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -485,8 +485,46 @@
 
 // ImportVacations --end
 
+// Import Leave Balance page
+.comboBoxSty2
+{
+    max-width: 100%;
+    margin: 0 auto;
+    
+    div
+    {
+        margin: 0;
+        margin-top: 1px;
+    }
+}
+// Import Leave Balance page -- end
+
 
 // reaponsive style
+
+@media only screen and (max-width: 1234px) 
+{
+    // ImportVacations
+    .btnsStyle
+    {
+        text-align: center;
+    }
+
+    .btnsStyleAr
+    {
+        text-align: center;
+    }
+
+    // ImportVacations --end
+
+        // Import Leave Balance page
+.comboBoxSty2
+{    
+        margin-top: 5px;
+        margin-bottom: 5px;
+}
+// Import Leave Balance page -- end
+}
 
 @media only screen and (max-width: 899px) 
 {
@@ -498,18 +536,13 @@
         }
     }
 
-     // ImportVacations
-     .btnsStyle
-     {
-         text-align: center;
-     }
- 
-     .btnsStyleAr
-     {
-         text-align: center;
-     }
- 
-     // ImportVacations --end
+    // Import Leave Balance page
+    .comboBoxSty2
+    {    
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    // Import Leave Balance page -- end
 }
 
 @media only screen and (max-width: 480px) 
