finish WorkinHoursByTimeReport page

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -499,6 +499,17 @@
 }
 // Import Leave Balance page -- end
 
+// WorkinHoursByTimeReport page
+.timeStyle
+{
+    & > div
+    {
+        padding-left: 5px;
+    }
+}
+
+// WorkinHoursByTimeReport page -- end
+
 
 // reaponsive style
 
