--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -535,6 +535,18 @@
         margin-bottom: 5px;
 }
 // Import Leave Balance page -- end
+
+// RegisterLocation
+    .deleteIcon
+    {
+        left: 53.5% !important;
+    }
+    .searchSty
+    {
+        right: 2% !important;
+        top: 55px !important;
+    }
+// RegisterLocation -- end
 }
 
 @media only screen and (max-width: 899px) 
@@ -554,6 +566,13 @@
         margin-bottom: 20px;
     }
     // Import Leave Balance page -- end
+
+    // RegisterLocation
+    .deleteIcon
+    {
+        left: 57% !important;
+    }
+// RegisterLocation -- end
 }
 
 @media only screen and (max-width: 480px) 
@@ -565,6 +584,12 @@
         text-align: center;
     }
     // general Style --end
+
+    .deleteIcon
+    {
+        left: 58% !important;
+    }
+// RegisterLocation -- end
 }
 
 .addbuttonlink
