--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -513,6 +513,590 @@
 
 // WorkinHoursByTimeReport page -- end
 
+// exam page
+
+.gridContainerSty
+{
+    padding: 0;
+}
+
+.showContainers
+{
+    display: block;
+}
+
+.HideContainers
+{
+    display: none;
+}
+
+.examCardContentSty
+{
+    padding: 0 !important;
+
+    & > div
+    {
+        & > div
+        {
+            padding-top: 0 !important;
+            padding-left: 0 !important;
+        }
+    }
+}
+
+
+.panarContainer
+{
+    // background-color: #434bdf;
+
+    display: flex;
+    align-items: end;
+    justify-content: space-between;
+    padding: 30px 5%;
+    
+
+    & > div:nth-child(1)
+    {
+        display: flex;
+        // justify-content: space-between;
+        align-items: center;
+        // padding: 30px 5%;
+        // margin-bottom: 100px;
+        align-items: end;
+
+        img
+        {
+            // width: 4%;
+            // width: 9%;
+            width: 18%;
+            // margin-top: 20px;
+        }
+
+
+        div
+        {
+            // margin-top: 20px;
+
+            p
+            {
+                font-size: 21px;
+                padding-left: 20px;
+                margin: 0;
+                color: #ffffff;
+            }
+
+            svg
+            {
+                margin: 5px;
+            }
+        }
+    }
+
+    & > div:nth-child(2)
+    {
+        display: flex;
+        // padding: 30px 5%;
+    }
+}
+
+
+.startExamContainer
+{
+    display: flex;
+    justify-content: center;
+    // margin: 50% 0;
+    // margin-top: 200px;
+    margin: 242px 0;
+
+    div
+    {
+        width: 60%;
+        display: flex;
+        flex-direction: column;
+        // text-align: center;
+        align-items: center;
+
+        img
+        {
+            width: 90%;
+        }
+
+        h1
+        {
+            // font-size: 2vw;
+            // font-size: 40px;
+            font-size: 32px;
+            // color: #434bdf;
+            text-align: center;
+        }
+
+        p
+        {
+            color: #afafaf;
+            font-size: 15px;
+            margin-bottom: 39px;
+            text-align: center;
+        }
+
+        button
+        {
+            // background: #434bdf;
+            // color: #ffffff;
+            border-radius: 20px;
+            // padding: 12px 25px;
+            width: 300px;
+            // margin: 0 auto;
+        }
+    }
+}
+
+
+.mainContainer
+{
+    // background-color: #434bdf;
+    
+
+    div:nth-child(1)
+    {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        // padding: 30px 5%;
+        padding: 40px 6%;
+        margin-bottom: 100px;
+
+        img
+        {
+            width: 8%;
+        }
+
+
+        div
+        {
+            flex-direction: row;
+            color: #ffffff;
+            opacity: 0.6;
+
+            svg
+            {
+                margin: 5px;
+            }
+        }
+    }
+    & > div:nth-child(2)
+    {
+        background: linear-gradient(to bottom,transparent,rgba(0,0,0,.5));
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 2.5%;
+        padding-bottom: 250px;
+
+        img
+        {
+            width: 58%;
+        }
+
+        h1,p
+        {
+            text-align: center;
+            color: #ffffff;
+        }
+
+        h1
+        {
+            margin: 20px 0;
+            font-size: 32px;
+        }
+
+        p
+        {
+            padding: 0 6%;
+            opacity: .8;
+            font-size: 15px;
+        }
+
+        button
+        {
+            // background: #434bdf;
+            // color: #ffffff;
+            border-radius: 20px;
+            padding: 6px 25px;
+            // padding: 12px 25px;
+            margin: 25px 0;
+        }
+    }
+}
+
+.categorySty
+{
+    width: 30%;
+    padding: 20px;
+    background-color: #f7f7f7;
+    margin-top: 50px;
+    // color: #8c9eff;
+    font-size: 20px;
+    border-left: none;
+}
+
+.categoryArSty
+{
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+}
+
+.categoryEnSty
+{
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+}
+
+.examContainer2
+{
+    display: flex;
+    justify-content: center;
+    margin: 80px 8%;
+
+    & > div
+    {
+        width: 60%;
+
+        & > span:nth-child(1)
+        {
+            height: 5px;
+            margin-bottom: 20px;
+
+            span
+            {
+                background-color: #6c3;
+            }
+        }
+
+        & > p:nth-child(2)
+        {
+            color: #999;
+            margin-bottom: 5px;
+            // font-weight: bold;
+            font-size: 18px;
+        }
+
+        & > div:nth-child(8)
+        // div
+        {
+            // background-color: #f00;
+            border-top: 3px solid #ededed;
+            padding-top: 20px;
+            text-align: right;
+            margin-top: 25px;
+            width: 100%;
+        }
+
+        div
+        {
+            div
+            {
+                & > div:nth-child(1),
+                & > div:nth-child(2)
+                {
+                    margin: 0 5px;
+                    padding-left: 0;
+                    text-align: right;
+
+                    button
+                    {
+                        font-size: 13px;
+                        // padding: 12px 30px;
+                        border-radius: 3px;
+                        border: none;
+                        padding: 12px 23%;
+                    }
+                }
+
+                & > div:nth-child(1)
+                {
+                    button
+                    {
+                        // font-size: 13px;
+                        // padding: 12px 30px;
+                        // border-radius: 3px;
+                        // border: none;
+                        color: #777;
+                        background: #e8e8e8;
+                    }
+                }
+
+                // & > div:nth-child(2)
+                // {
+                //     button
+                //     {
+                       
+                        
+                //         color: #fff;
+                //         background: #434bdf;
+                //     }
+                // }
+            }
+        }
+    }
+
+    
+
+    .radioContainer
+    {
+        width: 100%;
+        label
+        {
+            margin-bottom: 16px;
+            margin-left: 0;
+
+            & > span:nth-child(1)
+            {
+                padding: 0;
+                border: 1px solid #ccc;
+                margin-right: 25px;
+
+                .iconeSty
+                {
+                    color: #fff0;
+                }
+
+                .checkedIconeSty
+                {
+                    background-color: #434bdf; 
+                    color: #ffffff;
+                    padding: 8px;
+                }
+
+                svg
+                {
+                    height: 35px;
+                    width: 35px;
+                    // border: 1px solid #ccc;
+                    border-radius: 50%;
+                    // visibility: hidden;
+                    // color: #fff;
+                }
+            }
+        }
+    }
+
+    textarea
+    {
+        width: 100%;
+        padding: 12px;
+        border-radius: 3px;
+        border: 1px solid #d2d8dd;
+    }
+
+    textarea:focus
+    {
+        border-color: #434bdf;
+    }
+}
+
+.resultContainerSty
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    // padding: 150px;
+    // margin: 150px;
+    margin: 150px 10%;
+    // border: 1px solid ;
+    padding-bottom: 50px;
+
+    & > div:nth-child(1)
+    {
+        text-align: center;
+        // background-color: #3f51b5;
+        width: 100%;
+        padding: 50px;
+        margin-bottom: 80px;
+       
+    }
+
+    img
+    {
+        width: 10%;
+        margin-bottom: 30px;
+    }
+
+    h1
+    {
+        font-size: 35px;
+        margin-bottom: 75px;
+        color: #ffffff;
+    }
+
+    & > div:nth-child(2)
+    // & > div:nth-child(3)
+    {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        div
+        {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            & > span:nth-child(1)
+            {
+                color: rgb(189 189 189 / 25%);
+                position: absolute;
+                width: 120px !important;
+                height: 120px !important;
+                // color: rgb(189 189 189 / 25%);
+            }
+
+            & > span:nth-child(2)
+            {
+                width: 120px !important;
+                height: 120px !important;
+            }
+
+            p
+            {
+                font-size: 25px;
+            }
+        }
+
+        p
+        {
+            padding: 20px;
+            font-size: 20px;
+        }
+
+    }
+
+    & > div:nth-child(3)
+    // & > div:nth-child(4)
+    {
+        width: 50%;
+        margin-top: 50px;
+       
+
+        div
+        {
+            text-align: center;
+
+            button
+            {
+                font-size: 13px;
+                border-radius: 3px;
+                border: none;
+                padding: 12px 23%;
+            }
+        }
+    }
+
+    // & > div:nth-child(5)
+    // {
+    //     div
+    //     {
+    //         text-align: center;
+    //     }
+    // }
+
+}
+
+
+@media only screen and (max-width: 899px) 
+{
+    .nextPrevBtnSty
+    {
+        justify-content: center;
+
+        div
+        {
+            text-align: center !important;
+        }
+    }
+}
+
+@media only screen and (max-width: 768px) 
+{
+    .panarContainer
+    {
+        div:nth-child(1)
+        {
+            // padding: 30px 7%;
+
+            img
+            {
+                width: 16%;
+                // width: 8%;
+            }
+
+        }
+    }
+
+    .startExamContainer
+    {
+        
+        div
+        {
+            width: 100%;
+
+        img
+        {
+            width: 58%;
+        }
+        }
+    }
+
+    .mainContainer
+    {
+        div:nth-child(1)
+        {
+            padding: 40px 9%;
+        }
+    }
+
+    .examContainer2
+    {
+        & > div
+        {
+            width: 90%;
+        }
+    }
+}
+
+@media only screen and (max-width: 480px) 
+{
+    // .startExamContainer
+    // {
+        
+    //     div
+    //     {
+            
+    //         img
+    //         {
+                
+    //         }
+
+    //         h1
+    //         {
+    //             // font-size: 5vw;
+            
+    //         }
+
+    //         p
+    //         {
+                
+    //         }
+
+    //         button
+    //         {
+            
+    //         }
+    //     }
+    // }
+}
+
+// exam page -- end
+
 
 // reaponsive style
 
