--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -610,7 +610,8 @@
 
     div
     {
-        width: 60%;
+        width: 90%;
+        // width: 60%;
         display: flex;
         flex-direction: column;
         // text-align: center;
@@ -618,24 +619,28 @@
 
         img
         {
-            width: 90%;
+            width: 60%;
         }
 
         h1
         {
             // font-size: 2vw;
             // font-size: 40px;
-            font-size: 32px;
+            font-size: 30px;
+            // font-size: 32px;
             // color: #434bdf;
             text-align: center;
+            line-height: 40px;
         }
 
         p
         {
             color: #afafaf;
+            // font-size: 13px;
             font-size: 15px;
             margin-bottom: 39px;
-            text-align: center;
+            text-wrap: balance;
+            text-align: justify;
         }
 
         button
@@ -656,34 +661,35 @@
     // background-color: #434bdf;
     
 
-    div:nth-child(1)
-    {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        // padding: 30px 5%;
-        padding: 40px 6%;
-        margin-bottom: 100px;
+    // div:nth-child(1)
+    // {
+    //     display: flex;
+    //     justify-content: space-between;
+    //     align-items: center;
+    //     // padding: 30px 5%;
+    //     padding: 40px 6%;
+    //     margin-bottom: 100px;
 
-        img
-        {
-            width: 8%;
-        }
+    //     img
+    //     {
+    //         width: 8%;
+    //     }
 
 
-        div
-        {
-            flex-direction: row;
-            color: #ffffff;
-            opacity: 0.6;
+    //     div
+    //     {
+    //         flex-direction: row;
+    //         color: #ffffff;
+    //         opacity: 0.6;
 
-            svg
-            {
-                margin: 5px;
-            }
-        }
-    }
-    & > div:nth-child(2)
+    //         svg
+    //         {
+    //             margin: 5px;
+    //         }
+    //     }
+    // }
+    & > div:nth-child(1)
+    // & > div:nth-child(2)
     {
         background: linear-gradient(to bottom,transparent,rgba(0,0,0,.5));
         display: flex;
@@ -691,6 +697,7 @@
         align-items: center;
         padding: 2.5%;
         padding-bottom: 250px;
+        padding-top: 250px;
 
         img
         {
@@ -706,7 +713,9 @@
         h1
         {
             margin: 20px 0;
-            font-size: 32px;
+            font-size: 20px;
+            line-height: 40px;
+            font-weight: 900;
         }
 
         p
@@ -751,6 +760,7 @@
     border-bottom-right-radius: 50px;
 }
 
+.examContainer,
 .examContainer2
 {
     display: flex;
@@ -812,18 +822,18 @@
                     }
                 }
 
-                & > div:nth-child(1)
-                {
-                    button
-                    {
-                        // font-size: 13px;
-                        // padding: 12px 30px;
-                        // border-radius: 3px;
-                        // border: none;
-                        color: #777;
-                        background: #e8e8e8;
-                    }
-                }
+                // & > div:nth-child(1)
+                // {
+                //     button
+                //     {
+                //         // font-size: 13px;
+                //         // padding: 12px 30px;
+                //         // border-radius: 3px;
+                //         // border: none;
+                //         color: #777;
+                //         background: #e8e8e8;
+                //     }
+                // }
 
                 // & > div:nth-child(2)
                 // {
@@ -862,7 +872,7 @@
 
                 .checkedIconeSty
                 {
-                    background-color: #434bdf; 
+                    // background-color: #434bdf; 
                     color: #ffffff;
                     padding: 8px;
                 }
@@ -893,6 +903,32 @@
         border-color: #434bdf;
     }
 }
+
+    .examContainer
+    {
+        & > div
+        {
+
+            div
+            {
+                div
+                {
+                    & > div:nth-child(1)
+                    {
+                        button
+                        {
+                            color: #777;
+                            background: #e8e8e8;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+
+
+
 
 .resultContainerSty
 {
@@ -1054,7 +1090,7 @@
         }
     }
 
-    .examContainer2
+    .examContainer
     {
         & > div
         {
