start restyle dates in tables in all peoject

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -43,3 +43,9 @@
 /* .tss-193o0zc-MUIDataTableSelectCell-headerCell {
   background-color: #b3d4fc !important;
 } */
+
+
+pre
+{
+    font-family: "Cairo" ;
+}
