--- a/app/styles/pagesStyle/EmployeeAssessmentSty.scss
+++ b/app/styles/pagesStyle/EmployeeAssessmentSty.scss
@@ -43,7 +43,6 @@
     {
         display: flex;
         align-items: center;
-        // align-items: end;
 
         img
         {
@@ -73,7 +72,6 @@
         display: flex;
 
         justify-content: end;
-        // align-items: end;
 
         width: 50%;
         align-items: center;
@@ -95,6 +93,15 @@
         {
             margin: 0 1%;
         }
+    }
+}
+
+.panarContainerView2
+{
+    & > div:nth-child(1),
+    & > div:nth-child(2)
+    {
+        width: 100%;
     }
 }
 
@@ -153,7 +160,6 @@
         flex-direction: column;
         align-items: center;
         padding: 0 2.5%;
-        // padding-bottom: 458px;
         padding-bottom: 380px;
         padding-top: 250px;
 
@@ -195,7 +201,6 @@
 .categorySty
 {
     width: 30%;
-    // padding: 20px;
     padding: 10px 20px;
     background-color: #f7f7f7;
     margin-top: 50px;
@@ -206,8 +211,10 @@
 .categoryAllQueSty
 {
     width: 100%;
-    font-size: 30px;
+    font-size: 21px;
+    margin-top: 0px;
 }
+
 
 .categoryArSty
 {
@@ -226,7 +233,6 @@
 {
     display: flex;
     justify-content: center;
-    margin: 80px 8%;
 
     & > div
     {
@@ -343,10 +349,26 @@
 
     .radioContainerAllQue
     {
-        // width: 100%;
         label
         {
-        //    width: 40%;
+            & > span:nth-child(1)
+            {
+                .checkedIconeSty
+                {
+                    padding: 3px;
+                }
+
+                svg
+                {
+                    height: 23px;
+                    width: 23px;
+                }
+            }
+
+            & > span:nth-child(2)
+            {
+                font-size: 14px;
+            }
         }
 
         div
@@ -354,6 +376,13 @@
             text-align: initial !important;
             margin: 0 !important;
         }
+
+        p
+        {
+            font-size: 14px;
+        }
+
+        
     }
 
     .textareaTitle
@@ -381,36 +410,34 @@
     }
 }
 
-    // .examContainer
+    .examContainer
+    {
+        margin: 80px 8%;
+    }
+
+
+
     .prevBtnSty,
     .prevBtnSty:hover
     {
-        // & > div
-        // {
 
-        //     div
-        //     {
-        //         div
-        //         {
-        //             & > div:nth-child(1)
-        //             {
-        //                 button
-        //                 {
                             color: #777;
                             background: #e8e8e8;
-        //                 }
-        //             }
-        //         }
-        //     }
-        // }
     }
 
 
     .examContainer2
     {
+        margin: 15px 10px;
+
         & > div
         {
             width: 100%;
+        }
+
+        h1
+        {
+            font-size: 17px;
         }
     }
 
@@ -548,12 +575,10 @@
 
     .userInfoSty
     {
-        // display: flex;
         justify-content: space-around;
 
         p
         {
-            // width: 50%;
             text-align: initial;
             padding: 0 10px;
             margin: 0;
@@ -568,6 +593,19 @@
         & > p:nth-child(2)
         {
             font-size: 25px;
+        }
+    }
+
+    .userInfoStyView2
+    {
+        & > p:nth-child(1)
+        {
+            font-size: 13px;
+        }
+
+        & > p:nth-child(2)
+        {
+            font-size: 17px;
         }
     }
 
