--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -416,7 +416,7 @@
 
             input
             {
-                width: auto !important;
+                // width: auto !important;
                 display: inline;
             }
         }
