--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -53,6 +53,6 @@ pre
 /* used to make max width and height for table filter */
 .tss-1apl66-MUIDataTableToolbar-filterPaper
 {
-  max-width: 400px !important;
+  max-width: 80% !important;
   max-height: 500px !important;
 }
