--- a/app/containers/Pages/Payroll/custom-node-chart/my-node.css
+++ b/app/containers/Pages/Payroll/custom-node-chart/my-node.css
@@ -56,6 +56,7 @@
     height: 65px;
     padding: 2px; */
     background: #fff;
+    color: #060606;
     height: 96px;
     text-align: center;
     width: 150px;
