finish add shortcut into Calculate Attendance with open popup and add open new tab with leaves , missions , permissions, make edit in styles.scss

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -416,6 +416,7 @@
 
             input
             {
+                width: -webkit-fill-available !important;
                 // width: auto !important;
                 display: inline;
             }
