--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -174,6 +174,14 @@
     }
 }
 
+.kpiComboBoxSty
+{
+    & > div
+    {
+        margin-top: 8px;
+    }
+}
+
 
 
 .ImportTableContainer
@@ -558,6 +566,13 @@
         top: 55px !important;
     }
 // RegisterLocation -- end
+
+// UploadFileWithKPI page
+    .kpiBtnsSty
+    {
+        text-align: center;
+    }
+    // UploadFileWithKPI page -- end
 }
 
 @media only screen and (max-width: 899px) 
