--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -37,6 +37,14 @@
     margin: 0 5px !important;
 }
 
+.tableCellSty
+{
+    pre
+    {
+        font-size: 11px;
+    }
+}
+
 
 // general Style -- end
 
