finish fix data issue in personal page in employee data

--- a/app/styles/components/Table.scss
+++ b/app/styles/components/Table.scss
@@ -41,11 +41,15 @@
       }
     }
   }
-  td{
+  
+  td
+  {
+    
+    vertical-align: middle;
+
     &.toggleCell{
       position: relative;
     }
-    vertical-align: middle;
     .coverReadonly{
       width: 100%;
       height: 100%;
