IMPROVE: layout - update main font

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -47,7 +47,7 @@
 
 pre
 {
-    font-family: "Cairo" ;
+    font-family: "DINNextLTArabic" ;
 }
 
 /* used to make max width and height for table filter */
