finish fix responsive in charts in dashboard page, finish add on click on cards in HRApplicationEvaluation page change status compobox

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -682,6 +682,19 @@
 
 
 
+// HR Application Evaluation  - 
+
+.cardSty
+{
+    cursor: pointer;
+}
+
+
+// HR Application Evaluation - end
+
+
+
+
 
 
 
