finish add Exclusionary Questions section into JobApplicationPreview page

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -682,13 +682,29 @@
 
 
 
-// HR Application Evaluation  - 
+// HR Application Evaluation  
 
 .cardSty
 {
     cursor: pointer;
 }
 
+// HR Application Evaluation - end
+
+
+// Job Application Preview
+
+.queSty
+{
+   font-size: 16px;
+   font-weight: bolder;
+}
+
+.ansSty
+{
+   font-size: 13px;
+   color: #838383;
+}
 
 // HR Application Evaluation - end
 
