--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -709,6 +709,16 @@
 // HR Application Evaluation - end
 
 
+// Stage
+
+.tasksContainerSty
+{
+    margin-top: 24px !important;
+}
+
+// Stage - end
+
+
 
 
 
