start working on GPS Attendance page , replace api url in public/JobAdvertisement page

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -719,6 +719,21 @@
 // Stage - end
 
 
+// GPS Attendance --
+.clockSty
+{
+    font-size: 40px;
+    font-weight: bolder;
+    color: #ffffff;
+    border-radius: 10px;
+    width: max-content;
+    padding: 10px 25px;
+    margin: 0 auto;
+    box-shadow: 0px 5px 6px 0px #0000007d;
+}
+
+
+// GPS Attendance --end
 
 
 
@@ -830,7 +845,7 @@
 }
 
 
-// Job Advertisement  - end
+
 
 }
 
