finish GPS Attendance page

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -733,6 +733,29 @@
 }
 
 
+.attBtnSty
+{
+    width: 87px 
+}
+
+.historyCardSty
+{
+    // backgroundColor:"#d3e4fc", 
+    //                               width:"50%", 
+    //                               margin:"0 auto",
+    //                               display:"flex",
+    //                               padding:"15px",
+    //                               borderRadius:"5px",
+
+    background-color: #d3e4fc;
+    width: 50%;
+    margin: 0 auto;
+    display: flex;
+    padding: 15px;
+    border-radius: 5px;
+}
+
+
 // GPS Attendance --end
 
 
