--- a/app/styles/pagesStyle/DetailedAttendanceReportTemplateSty.scss
+++ b/app/styles/pagesStyle/DetailedAttendanceReportTemplateSty.scss
@@ -1,7 +1,16 @@
+
+.reviewContainerSty
+{
+    min-height: 300px;
+    background-color: #ffffff;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+}
+
 .headerContainer
 {
     page-break-before: always;
-    padding: 20px 20px 10px 20px;
+    padding: 20px 20px 0px 20px;
 }
 
 
@@ -30,9 +39,8 @@
         {
             border-bottom: 2px solid #000;
             margin: 0;
-            padding-bottom: 20px;
             margin-bottom: 20px;
-            font-size: 25px;
+            font-size: 20px;
         }
     }
 
@@ -136,12 +144,19 @@
 
     th
     {
-        font-size: 1.2vw !important;
+        font-size: 0.9vw !important;
         background-color: #c4c1bc;
         border: 1px solid #000;
         font-weight: bolder;
         padding: 3px 0.5%;
         white-space: nowrap;
+    }
+
+    @media print {
+        th
+        {
+            font-size: 10px !important;
+        }
     }
 
     td
