finish fix filter into Assessment Report page with add defualt company

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -470,8 +470,7 @@
         & > div
         {
             display: table;
-            padding-top: 10px !important;
-            padding-bottom: 10px !important;
+            padding: 10px !important;
            
             
 
