finish add new data into DetailedAttendanceReport print and review, fix issue into MainTable component, finish EmployeeSchedule page

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -11,6 +11,7 @@
         & > div:nth-child(1)
         {
             max-width: 100% !important;
+            width: 100%;
         }
     }
 }
@@ -838,7 +839,23 @@
 // Mission List  --end
 
 
+// Employee Schedule
+.EmployeeSchedulePopUpContainerSty
+{
+    width: 70%;
+    margin: 0 auto;
 
+    div:nth-child(3)
+    {
+        & > div:nth-child(1)
+        {
+            max-width: 100% !important;
+            width: 100%;
+        }
+    }
+}
+
+// Employee Schedule --end
 
 
 
