--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -858,6 +858,43 @@
 // Employee Schedule --end
 
 
+// Employee Status Report
+.employeeStatusContainerSty
+{
+   padding: 15px;
+   border-radius: 10px;
+
+   .cardContainer
+   {
+    display: flex;
+    padding-bottom: 10px;
+
+    & > div:nth-child(1)
+    {
+        background-color: transparent;
+    }
+
+    & > div:nth-child(2)
+    {
+        span
+        {
+            font-size: 11px;
+            font-weight: bolder;
+        }
+
+        p
+        {
+            font-size: 15px;
+            margin: 0;
+            color: #999;
+        }
+    }
+   }
+}
+
+// Employee Status Report --end
+
+
 
 
 
