add and rename columns in TransferRequest , finish add review page into PaymentSlipTotal page

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -792,7 +792,8 @@
 
 // PaymentSlipReview
 
-.PaymentSlipReviewContainer
+.PaymentSlipReviewContainer,
+.PaymentSlipTotalContainer
 {
     background-color: #ffffff;
     margin-bottom: 50px;
