finish create and edit menu template in MenuTemplate page

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -16,6 +16,18 @@
     }
 }
 
+.popupContainerStySize2
+{
+    & > div
+    {
+        & > div
+        {
+            max-width: none;
+            width: 50%;
+        }
+    }
+}
+
 
 .gridSty
 {
